# DarcyHarmonyNext

./: README.md  build-profile.json5  log.txt  oh-package-lock.json5  oh-package.json5
AppScope/: app.json5
HarmonyNext/: ArkTS学习笔记.md  ExtentionAbility.md  MVVM管理状态.md  UIAbility.md  adb root.md  http.md  动态库HSP.md  单线程 异步任务.md  发布har和hsp到OpenHarmony三方仓库.md  多线程.md  数据持久化.md  组件.md  组件复用Custom.md  统一数据管理框架.md  进程通信.md  静态库HAR.md  项目结构.md  鸿蒙HDC命令.md
chat/: oh-package-lock.json5  oh-package.json5
chat/src/main/: module.json5
chat/src/ohosTest/: module.json5
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/mock/: mock-config.json5  shared_context_hsp.mock.ets
entry/src/test/: AsyncWait.test.ets  List.test.ets  LocalUnit.test.ets  (+3 more)
library_camera/: Index.ets  oh-package-lock.json5  oh-package.json5
library_chat/: Index.ets  oh-package.json5
library_contact/: Index.ets  oh-package-lock.json5  oh-package.json5
library_napi/: Index.ets  build-profile.json5  oh-package-lock.json5  oh-package.json5
library_napi/src/main/cpp/: ArkUIBaseNode.h  ArkUIListItemNode.h  ArkUIListNode.h  ArkUINode.h  ArkUITextNode.h  CMakeLists.txt  NativeEntry.cpp  NativeEntry.h  NativeModule.h  NormalTextListExample.h  napi_init.cpp
library_napi/src/main/cpp/types/library_napi/: Index.d.ts  oh-package.json5
login/: oh-package-lock.json5  oh-package.json5
shared_library_context/: Index.ets  obfuscation-rules.txt  oh-package.json5
static_library_common/: CHANGELOG.md  Index.ets  LICENSE  README.md  oh-package.json5
(+283 files in other folders)
